2009-03-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 573070 – crash when working with 1x3200 pixel image

	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
	make sure that x_src_dec and y_src_dec never become zero.

2009-03-12  Sven Neumann  <sven@gimp.org>

	Bug 573542 – blur plugin: bug in the first line

	* plug-ins/common/blur.c (blur_prepare_row): cast GimpPixelRgn.h
	to a signed integer.

2009-03-11  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/file-jpeg/jpeg.h (PLUG_IN_BINARY): fixed typo.

2009-03-10  Sven Neumann  <sven@gimp.org>

	Bug 572403 – gimp-2.6 crashed with SIGSEGV in IA__g_object_get()

	* configure.in: fixed check for newer version of GTK+ that
	determines if GTK_DISABLE_DEPRECATED is used.

2009-03-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/file-jpeg/jpeg-load.c (load_image)
	* plug-ins/file-jpeg/jpeg-save.c (save_image): need to finish the
	progress update.

2009-03-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 573695 – 1-bit white background saved as PBM becomes all black

	* plug-ins/common/file-pnm.c: need to handle the special case that
	the image colormap has only one entry.

2009-03-02  Sven Neumann  <sven@gimp.org>

	Fix compilation with GEGL from trunk:
	
	* app/gegl/Makefile.am
	* app/geg/gegl-types.h: renamed to app/gegl/gimp-gegl-types.h

	* app/core/core-types.h
	* app/gegl/*.c: changed accordingly.

2009-02-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 573488 – Small bug in Filter>Distorts>Ripple

	* plug-ins/common/ripple.c (ripple_vertical): fixed bug spotted in
	SMEAR mode, pointed out by Andreas Groth.

2009-02-22  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c: reverted last change. No changes in
	the stable branch without commit approval. And definitely no
	string changes.

2009-02-22  Marco Ciampa  <ciampix@libero.it>

	* app/actions/image-actions.c: fixed duplicated keyboard shortcut
