@@ -2,6 +2,15 @@
 
 	Merged from trunk:
 
+	Bug 573695 – 1-bit white background saved as PBM becomes all black
+
+	* plug-ins/common/file-pnm.c: look at the colormap and test which
+	of the two colors is black and which is white.
+
+2009-03-12  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
 	Bug 573070 – crash when working with 1x3200 pixel image
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
